--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/testing-library__jest-dom": "5.14.0",
     "@types/webpack": "5.28.0",
     "@types/webpack-env": "1.16.2",
+    "bootstrap": "5.1.0",
     "chalk": "4.1.1",
     "cross-env": "7.0.3",
     "eslint-config-prettier": "8.3.0",
@@ -34,11 +35,13 @@
     "inquirer-directory": "2.2.0",
     "jest-styled-components": "7.0.4",
     "lint-staged": "10.3.0",
+    "moment": "2.29.1",
     "node-plop": "0.26.2",
     "plop": "2.7.4",
     "prettier": "2.3.2",
     "react": "17.0.2",
     "react-app-polyfill": "2.0.0",
+    "react-bootstrap": "2.0.0-beta.6",
     "react-dom": "17.0.2",
     "react-helmet-async": "1.0.9",
     "react-i18next": "11.11.1",
@@ -46,6 +49,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "17.0.2",
+    "recharts": "2.1.2",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
     "rimraf": "3.0.2",
